2007-12-30  Neal H. Walfield  <neal@gnu.org>

	* zalloc.h (zalloc_memory): New declaration.
	* zalloc.c (zalloc_memory): New definition.
	(zfree): Keep zalloc_memory up to date.
	(zalloc): Likewise.  Add an assert.
	(zalloc_dump_zones): Add an assert.

2007-12-30  Neal H. Walfield  <neal@gnu.org>

	* zalloc.h: Don't include <l4.h>.  Include <stdint.h>.  Replace
	use of l4 types with standard C types.
	* zalloc.c: Include <stdint.h> and <l4/math.h>.  Replace use of l4
	types with standard C types.
	(zone): Don't explicitly initialize to 0.

2007-12-30  Neal H. Walfield  <neal@gnu.org>

	* memory.c (memory_add): Don't add the page at address 0 to the
	free pool.

2007-12-27  Neal H. Walfield  <neal@gnu.org>

	* object.h (LINK_TEMPLATE): Move assertion related code into the
	assert statement.

2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* t-activity.c (test): Remove unused variable.

2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* activity.h (activity_for_each_child): Improve comment.
	(activity_consistency_check): Remove.
	(activity_consistency_check_): Likewise.
	* activity.c (activity_consistency_check_): Remove.
	* object.c (memory_object_alloc): Remove call to
	activity_consistency_check.
	(object_find_soft): Likewise.
	(folio_free): Likewise.
	(folio_object_alloc): Likewise.

2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* object.h (struct object_desc): Replace field activity_lru.prevp
	with activity_lru.prev.  Replace field global_lru.prevp with
	global_lru.prev.
	(LINK_TEMPLATE): Use circular lists.  Replace the
	object_field_link function with object_field_push and
	object_field_queue.  Require that the caller pass the head of the
	list to unlink.  Update users.

2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Refactor code to eliminate gcc
	uninitialized use warnings.
	
2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Refactor code to move variable